cabal-version:      2.4
name:               esqueleto-mtl
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Isaac van Bakel
maintainer:         ivb@vanbakel.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Database.Esqueleto.Monad.Legacy
        Database.Esqueleto.Monad.Experimental

    -- Modules included in this library but not exported.
    -- other-modules:
    default-extensions:
                      OverloadedStrings
    other-extensions: FlexibleContexts
    build-depends:    base ^>=4.15.1.0
                    , esqueleto
                    , persistent-mtl
                    , text
    hs-source-dirs:   src/
    default-language: Haskell2010
